--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -34,10 +34,10 @@
 Bu sayfadaki örnekleri, imlâyı değiştirmeyen dört grupta topladım, beşinci grup ayrı bir sayfada anlatılıyor:
 <ol>
     <li>Şive/lehçe farkları -- çok sayıda, anlam değişmez</li>
-    <li>Hareke farkları -- 100 kadar ayet, anlam değişebilir</li>
-    <li>Fiil kipi ve çekimi -- daha az sayıda, esas anlam değişmez</li>
+    <li>Hareke farkları -- daha az sayıda, anlam değişebilir</li>
+    <li><a href="./iqra_list.html#tablo1">Fiil kipi ve çekimi</a> -- 200 kadar ayet, esas anlam değişmez</li>
     <li>Farklı kelime, aynı imlâ -- noktalama farkı, 13 ayette 10 kelime</li>
-    <li><a href="./mesahif.html" target="finder">Farklı imlâ</a> -- 44 ayet, biri hariç hepsi harf farkı</li>
+    <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> -- 44 ayet, biri hariç hepsi harf farkı</li>
 </ol>
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
 </p>
@@ -132,7 +132,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
     Başlıkta "11 kelime" diyor ama imlâsı farklı olan bir kelimeyi 5. bölüme aldım.
 </p>
 
-<h3>5. <a href="./mesahif.html" target="finder">Farklı imlâ</a></h3>
+<h3>5. <a href="./mesahif.html">Farklı imlâ</a></h3>
 <p>Bazı ayetlerin okunuşuyla birlikte yazılışı da değişiyor. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. Sonuç olarak, bugün dünyanın her yerinde okunmakta olan mushaflar ile Hz Osman tarafından Kûfe'ye gönderilen el yazması arasında sadece 3 harf farkı var.
 </p>
 <p></p>
