--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -35,7 +35,7 @@ Bu sayfadaki örnekleri, imlâyı değiştirmeyen dört grupta topladım, beşin
 <ol>
     <li>Şive/lehçe farkları -- çok sayıda, anlam değişmez</li>
     <li>Hareke farkları -- daha az sayıda, anlam değişebilir</li>
-    <li><a href="./iqra_list.html#tablo1">Fiil kipi ve çekimi</a> -- 200 kadar ayet, esas anlam değişmez</li>
+    <li><a href="./iqra_list.html#tablo1">Farklı harf, aynı kelime</a> -- 200 kadar ayet, esas anlam değişmez</li>
     <li>Farklı kelime, aynı imlâ -- noktalama farkı, 13 ayette 10 kelime</li>
     <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> -- 44 ayet, biri hariç hepsi harf farkı</li>
 </ol>
@@ -65,7 +65,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
     <a name="v=38:13&b=lo_#ayokapi">38:13</a> ayetinde 
     kelimeyi <b>leyke</b> şeklinde okumuş. Demek "Leyke" diye bir yer ismi var.
 </p>
-<h3>3. Fiil kipi ve çekimi</h3>
+<h3>3. Farklı harf, aynı kelime</h3>
 <p>Şive farkı kadar yaygın olmayan bir fark da fiillerde gözleniyor. Fiilin hangi bâbda (kip) kullanıldığı, etken veya edilgenliği, hangi şahıs olduğu gibi hususlarda harf ya da hareke farkları kaydedilmiştir.</p>
 <p>Hicr <a name="v=15:8&r=nzl">15:8</a> &mdash;
     <b>nunezzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tenezzelu veya tunezzelu</a>
@@ -73,8 +73,8 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
     Kûfe imamları bu ayeti "melekleri hakkıyla indiririz" mealinde okurken, diğerleri "melekler hakkıyla iner" diyor. Söz farklı ama taşıdığı anlam aynı.
 </p>
 
-<h3>4. Farklı kelime, aynı imlâ</h3>
-<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için ilk mushaflarda "bölgesel fark" olarak kayda geçmiş. Aşağıda <b>13 ayette 10 kelime</b> olarak  gösterdim.</p>
+<h3 id="kelime">4. Farklı kelime, aynı imlâ</h3>
+<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için ilk mushaflarda "bölgesel fark" olarak kayda geçmiş. Bu farkların tamamını aşağıda <b>13 ayette 10 kelime</b> olarak gösterdim.</p>
 <p>Bakara <a name="v=2:219&r=kbr">2:219</a> &mdash;
     <b>kebîrun</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/219/variants" target=Kuran>kesîrun</a>
     <img src="img/Bakara 219.png">
