--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -48,8 +48,8 @@
 <ul>
     <li>Yüz kadar ayette aynı imlâ ile farklı harf okunabilir <br>
     (bu kelimeleri Iqra yazılımda göstermek için çalışıyorum)</li>
-    <li><a href="./kiraat.html" target=finder>13 ayette</a> aynı imlâ ile farklı kelime okunabilir </li>
-    <li>Kelime olarak imlâsı değişebilen sadece <a href="./mesahif.html" target=finder>üç ayet</a> var: <br>
+    <li><a href="./kiraat.html#kelime" target=finder>13 ayette</a> aynı imlâ ile farklı kelime okunabilir </li>
+    <li>Kelime olarak imlâsı değişebilen sadece <a href="./mesahif.html#tablo1" target=finder>üç ayet</a> var: <br>
     * Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafında <b>tahtehâ ⇒ min tahtihâ</b><br>
     * Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafında <b>yuseyyirukum ⇒ yenşurukum</b><br>
     * Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam mushafında <b>huve ⇒</b> (yok) </li>
