--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -70,7 +70,7 @@ erken dönem mushaflar hakkında bilgi verirken, Kur'ân-ı Kerim'in korunmuşlu
 M Medine, C Mekke, B Basra, S Şam/Suriye, K Kûfe <br>
 (Şarkiyatçıların kullandığı kısaltma harfleri)</p>
 <p>Tablonun her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin varyant okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
-<p>Tablonun ilk satırında, 2:116 ayetindeki <b>veqâlû</b> kelimesinin Şam mushafında <b>vav</b> olmadan yazıldığını görüyoruz. Bunun gibi, 9. satırdaki (6:63) <b>encânâ</b> kelimesi, Kûfe dışındaki 4 mushafta <b>enceytenâ</b> olarak yazılmış.</p>
+<p>Aşağıda ilk satırda, 2:116 ayetindeki <b>veqâlû</b> kelimesinin Şam mushafında <b>vav</b> olmadan yazıldığını görüyoruz. Bunun gibi, 9. satırdaki (6:63) <b>encânâ</b> kelimesi, Kûfe dışındaki 4 mushafta <b>enceytenâ</b> olarak yazılmış.</p>
 
   <table id=tablo1></table>
 <blockquote>Pembe işaretli 4 satır diğer iki kaynakta yok.<br>
@@ -115,7 +115,7 @@ const DATA1 =
 7:141	nje	S	nun	elif	enceynâkum	encâkum
 9:100	tHt	C		 <b>min</b>	tahtehâ	min tahtihâ
 9:107	Ax*	M S	vav 		vellezîne	ellezîne
-10:22	syr	S	(syr)	(nşr)	<small>yuseyyirukum</small>	yenşurukum	yellow
+10:22	syr	S	(syr)	(nşr)	yuseyyirukum	yenşurukum	yellow
 17:93	qwl	S C		 elif	qul 	qâle	pink
 18:36	xyr	M C S		 mim	minhâ	minhumâ
 18:95	mkn	C		 nun	mekkenniy	mekkeneniy
