--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -46,16 +46,16 @@
 <p><b>Kıraat farkları</b> imamların okuyuş tercihleri ya da hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.</p>
 <p><b>İmlâ farkları</b> da yazıcıların rastgele tercihleri veya hataları değil, bölgesel kıraat farklarını yansıtıyor. Kıraat farklarına bağlı olan şu unsurlar korunmuş:</p>
 <ul>
-    <li>Yüz kadar ayette aynı imlâ ile farklı harf okunabilir <br>
+    <li><a href="./iqra_list.html#tablo1">200 kadar ayette</a> aynı imlâ ile farklı harf okunabilir <br>
     (bu kelimeleri Iqra yazılımda göstermek için çalışıyorum)</li>
-    <li><a href="./kiraat.html#kelime" target=finder>13 ayette</a> aynı imlâ ile farklı kelime okunabilir </li>
-    <li>Kelime olarak imlâsı değişebilen sadece <a href="./mesahif.html#tablo1" target=finder>üç ayet</a> var: <br>
+    <li><a href="./kiraat.html#tablo1">13 ayette</a> aynı imlâ ile farklı kelime okunabilir </li>
+    <li>Kelime olarak imlâsı değişebilen sadece <a href="./mesahif.html#tablo1">üç ayet</a> var: <br>
     * Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafında <b>tahtehâ ⇒ min tahtihâ</b><br>
     * Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafında <b>yuseyyirukum ⇒ yenşurukum</b><br>
     * Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam mushafında <b>huve ⇒</b> (yok) </li>
 </ul>
 <h3>Sonuç</h3>
-<p>"Bir harfi bile değişmemiştir" söylemi, kıraat farklarından habersiz olmanın bir göstergesidir, bu söylemden vaz geçmeliyiz. Peki ne diyelim? Aslında korunmuşluk çok daha kuvvetli bir hakikat: Kuran-ı Kerim bütün <b>kıraat farklarıyla birlikte</b> korunmuştur; <m>surelerin</m>, <m>ayetlerin</m>, <m>kelimelerin</m> dizilişinde hiçbir farklılık yoktur. Bazı kelimelerin okunuşunda hareke ya da harf farkı olabilir. Kıraat farkları hafızalarda, harf farkları Osmanî mushaflarda kaydedilmiştir.</p>
+<p>"Bir harfi bile değişmemiştir" söylemi, kıraat farklarından habersiz olmanın bir göstergesidir, bu söylemden vaz geçmeliyiz. Peki ne diyelim? Aslında korunmuşluk çok daha kuvvetli bir hakikat: Kuran-ı Kerim bütün <b>kıraat farklarıyla birlikte</b> korunmuştur; <m>surelerin</m>, <m>ayetlerin</m>, <m>kelimelerin</m> dizilişinde hiçbir farklılık yoktur. Bazı kelimelerin okunuşunda hareke ya da harf farkı olabilir. Kıraat farkları hafızalarda, imlâ farkları Osmanî mushaflarda kaydedilmiştir.</p>
 <br>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Eylul 2024<br>
 </p>
