--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -5,11 +5,9 @@
 <meta name="author"      content="M A Eyler, Istanbul, 2024" />
 <meta name="description" content="The oldest sheets of Quran" />
 <link rel="stylesheet" href="ders.css" media="all">
+<link rel="stylesheet" href="variants.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
 <title>Kıraat farkları</title>
-<style>
-    img { max-width: 400px; }
-</style>
 
 <h2>Geçerli kıraat farkları &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
@@ -36,7 +34,7 @@ Bu sayfadaki örnekleri, imlâyı değiştirmeyen dört grupta topladım, beşin
     <li>Şive/lehçe farkları -- çok sayıda, anlam değişmez</li>
     <li>Hareke farkları -- daha az sayıda, anlam değişebilir</li>
     <li><a href="./iqra_list.html#tablo1">Farklı harf, aynı kelime</a> -- 200 kadar ayet, esas anlam değişmez</li>
-    <li>Farklı kelime, aynı imlâ -- noktalama farkı, 13 ayette 10 kelime</li>
+    <li><a href="#tablo1">Farklı kelime, aynı imlâ</a> -- noktalama farkı, 13 ayette 10 kelime</li>
     <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> -- 44 ayet, biri hariç hepsi harf farkı</li>
 </ol>
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
@@ -74,7 +72,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 </p>
 
 <h3 id="kelime">4. Farklı kelime, aynı imlâ</h3>
-<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için ilk mushaflarda "bölgesel fark" olarak kayda geçmiş. Bu farkların tamamını aşağıda <b>13 ayette 10 kelime</b> olarak gösterdim.</p>
+<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için her ikisi de hafızalarda korunmuş, lakin Osmânî mushaflarda aynı şekilde resmedilmiş. Bu farkların tamamını aşağıda <b>13 ayette 10 kelime</b> olarak gösterdim.</p>
 <p>Bakara <a name="v=2:219&r=kbr">2:219</a> &mdash;
     <b>kebîrun</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/219/variants" target=Kuran>kesîrun</a>
     <img src="img/Bakara 219.png">
@@ -123,20 +121,29 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p>Tekvir <a name="v=81:24&r=Dnn">81:24</a> &mdash;
     <b>bidanîn</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/81/verse/24/variants" target=Kuran>bizanîn</a>
     <img src="img/Tekvir 24.png">
-
 </p>
 <br>
+<table id=tablo1></table>
 <p><b>Kaynak:</b><br>
     <a href="https://journals.ku.edu.kw/jsis/index.php/jsis/article/view/1491" 
     target=Kuran">Eleven words whose spelling is the same</a> (Khazer Al Majali) 2003, s.87<br>
-    Başlıkta "11 kelime" diyor ama imlâsı farklı olan bir kelimeyi 5. bölüme aldım.
+    Başlıkta "11 kelime" diyor ama imlâsı farklı olan bir kelimeyi 5. bölüme aldım. Ayrıca üç adet tekrar ile tabloda 13 ayet var.
 </p>
 
 <h3>5. <a href="./mesahif.html">Farklı imlâ</a></h3>
-<p>Bazı ayetlerin okunuşuyla birlikte yazılışı da değişiyor. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. Sonuç olarak, bugün dünyanın her yerinde okunmakta olan mushaflar ile Hz Osman tarafından Kûfe'ye gönderilen el yazması arasında sadece 3 harf farkı var.
+<p>Bazı ayetlerin okunuşuyla birlikte yazılışı da değişiyor. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Biri diğerinden "daha doğru" denemediği için, her ikisi de Osmânî mushaflarda "bölgesel fark" olarak kayda geçmiş. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. Sonuç olarak, bugün dünyanın her yerinde okunmakta olan mushaflar ile Hz Osman tarafından Kûfe'ye gönderilen el yazması arasında sadece 3 harf farkı var.
 </p>
 <p></p>
 <br>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Temmuz 2024<br>
 </p>
 <script src="init.js"></script>
+<script src="/Kuran/code/common.js"></script>
+<script src="/Kuran/code/model.js"></script>
+<script src="/Kuran/code/utilities.js"></script>
+<script src="./variants.js"></script>
+<script>
+function filter(x) {
+    return (!x.rgn || x.rgn !== '*')
+}
+</script>
