--- a/ders/kadime.html
+++ b/ders/kadime.html
@@ -33,7 +33,7 @@
 <p>Iqra yazılımı içinde web sayfaları</p>
 <ul>
     <li><a href="kiraat.html">Geçerli kıraat farkları</a>
-    <li><a href="iqra_list.html">Iqra fark listesi</a>
+    <li><a href="iqra_list.html">Harf farkları listesi</a>
     <li><a href="mesahif.html">Kayıtlı imlâ farkları</a>
     <li><a href="korunmus.html">Korunmuş unsurlar</a>
     <li><a target=Kuran 
