--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -13,12 +13,12 @@
 
 <p>Kuran-ı Kerim'in bir tek metin olmadığı, çok sayıda kelimenin farklı okunuşları olduğu iyi bilinen bir hakikattır. Bu farkların esas olarak iki sebebi var:</p>
 <ul>
-    <li>Lehçe ve şive farkları ile okumaya izin verilmiştir, ses yönünden zenginlik sağlar. 93. sureye "duhâ" yerine "duhê" ya da "duhiy" demek gibi.</li>
+    <li>Lehçe ve şive farkları ile okumaya izin verilmiştir, ses yönünden zenginlik sağlar. 93 numaralı sureye "duhâ" yerine "duhê" ya da "duhiy" demek gibi.</li>
     <li>Farklar anlamı değiştiriyorsa, iki anlam da doğrudur, anlam yönünden zenginlik sağlar. Fatiha 4. ayet, "melik" ve "mâlik" anlamlarını birlikte taşır.</li>
 </ul>
 <p>Kıraat konusunu anlamayan bazı şarkiyatçılar, anlam farklarına yol açan okuyuşları tahrif olarak görüyorlar. İslam alimleri ise, "bunlar münzeldir, vahiyle gelmiştir, Efendimiz (SAS) bazen onu bazen bunu okumuştur" diyor. Hakikaten, sahabe "melik" ve "mâlik" kelimelerinin anlam farkını kaçırmış olamaz! İkisi de tevatür derecesinde biliniyor, o halde elbette iki anlam birlikte geçerlidir.</p>
 <p>Lakin, kimse kendine göre bir kıraat uyduramaz. Farklı kıraatler çok sayıdadır, isnad zinciri ile sahabeye kadar uzanır. Bir kıraatin geçerli olması için hem sözlü hem yazılı delil aranır: Sağlam bir isnad zinciri ve yazılı mushaflardan birine uygunluk. "Şu kelime böyle de okunabilir" diyenlerin yolu bu iki kural ile kapalıdır.</p>
-<p><i>Corpus Coranicum</i> -- 2007'de başlamış kapsamlı bir web sitesi, halen gelişmeye devam ediyor. Kıraat farklarını bu siteden aldığım birkaç örnek üstünde görelim.</p>
+<p><i>Corpus Coranicum</i> -- 2007'de açılmış kapsamlı bir web sitesi, halen gelişmeye devam ediyor. Kıraat farklarını bu siteden aldığım birkaç örnek üstünde görelim.</p>
 <p>Bu sayfadaki her örnekte koyu renkle gösterilen, Ebû Amr ed-Dânî'nin <i>et-Teysīr</i> adlı eseri ana kaynak. Hicretten 400 yıl sonra yazılmış bu kitabı Altıkulaç da referans olarak kullanıyor, kıraat ilminde sağlam bir eser olduğunu biliyoruz. Lakin, sitede bundan başka çok sayıda kaynak kullanılmış, onların güvenilirliği hakkında bir bilgim yok. Bu nedenle, sağlam olduğunu bildiğim bir tek kaynak kullanıyorum. </p>
 <pre>et-Teysīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
 1 Nāfi`      Medine
