--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -29,19 +29,23 @@
   (*) Asım'ın Hafs kıraati son yüz yıl içinde fiilen dünya standardı olmuştur.
 </blockquote>
 <p><b>Âyetlerin</b> <m>sayısı ve sırası</m> korunmuş. "On beşinci surenin dokuzuncu ayeti" deyince bütün dünyada aynı ayet anlaşılır ve <a name="v=15:9&r=HfZ">15:9</a> şeklinde gösterilir. (Kitabın korunmuş olduğunun en önemli göstergesi bu özellik!) Hiçbir mushafta araya bir ayet eklendiğini ya da silindiğini göremezsiniz. Bazı surelerin başındaki şifreli harflerin ayet sayılması ihtilaflı ama standart mushafımızda 6236 ayet var.</p>
-<p><b>Kelimelerin</b> <m>sırası</m> korunmuş. Hiçbir mushafta kelime sırasının değiştiğini göremezsiniz. Standart mushafımızda 77.430 kelime olmakla birlikte, bu sayıda ihtilaf var. Çünkü bazı kelimeleri ayrı ya da bitişik yazmak mümkün. </p>
-<p>En iyi bilinen örnek, iki kelime içeren <i>ebneumme</i> "anamın oğlu" ifadesi. Kitap'ta iki yerde geçen bu ifade birinde ayrı, diğerinde bitişik yazılır. Eski ve yeni bütün mushaflarda bu ayrıntı korunmuştur, A'râf suresinde arada boşluk bırakılır, Tâhâ suresinde bitişik yazılır:
+<p><b>Kelimelerin</b> <m>sırası</m> korunmuş. Hiçbir mushafta kelime sırasının değiştiğini göremezsiniz (*). Standart mushafımızda 77.430 kelime olmakla birlikte, bu sayıda ihtilaf var. Çünkü bazı kelimeleri ayrı ya da bitişik yazmak mümkün. </p>
+<blockquote>
+    (*) <a name="v=9:111&r=qtl">Tevbe 111. ayette</a> ardışık iki kelimenin sırası aynı imlâ ile değişebiliyor.
+</blockquote>
+<p>En iyi bilinen örnek, iki kelime içeren <i>ebneumme</i> "anamın oğlu" ifadesi. Kitap'ta iki yerde geçen bu ifade birinde ayrı, diğerinde bitişik yazılır. Eski ve yeni bütün mushaflarda bu ayrıntı korunmuştur: A'râf suresinde ayrı yazılır ve ikinci kelime elif ile başlar, Tâhâ suresinde aynı kelime vav ile yazılır ve önceki kelimeye bitişiktir.
     <img src="/Kitap/KK/yebneumme.png">
     <div class="caption">
         <a href="https://okuyun.github.io/Rehber/finder#b=Abn%20%3Em" target=finder>ebne umme</a> &emsp;#b=Abn%20>m
     </div>
 </p>
-<p>Başka bir örnek: "Oyun ve eğlence" anlamına gelen <i>la'ibun velehvun</i> kelimeleri dört ayette bu sırada, iki ayette "eğlence ve oyun" şeklinde ters sırada geçiyor. Ters söylemekle anlam değişir mi? Elbette hayır. Ama hiçbir kıraat imamı bu altı ayeti, standart kıraatten farklı okumamış. Yani, anlamı değiştirmeyen ve hataya açık görünen bu kelimelerin sırası bile korunmuş.
+<h3>Takdim-tehir farkı yok</h3>
+<p>İkinci örnek: "Oyun ve eğlence" anlamına gelen <i>la'ibun velehvun</i> kelimeleri dört ayette bu sırada, iki ayette "eğlence ve oyun" şeklinde ters sırada geçiyor. Ters söylemekle anlam değişir mi? Elbette hayır. Ama hiçbir kıraat imamı bu altı ayeti, standart kıraatten farklı okumamış. Yani, anlamı değiştirmeyen ve hataya açık görünen bu kelimelerin sırası bile korunmuş.
     <img src="/Kitap/KK/ittehazu_dinehum.png">
     <div class="caption">
         <a href="https://okuyun.github.io/Rehber/finder#b=tx*wA%20dynhm" target=finder>ittehazû dînehum</a> &emsp;#b=tx*wA%20dynhm
     </div>
-</p><br>
+</p>
 <h3>Başka ne korunmuş?</h3>
 <p><b>Kıraat farkları</b> imamların okuyuş tercihleri ya da hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.</p>
 <p><b>İmlâ farkları</b> da yazıcıların rastgele tercihleri veya hataları değil, bölgesel kıraat farklarını yansıtıyor. Kıraat farklarına bağlı olan şu unsurlar korunmuş:</p>
