--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -127,7 +127,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p><b>Kaynak:</b><br>
     <a href="https://journals.ku.edu.kw/jsis/index.php/jsis/article/view/1491" 
     target=Kuran">Eleven words whose spelling is the same</a> (Khazer Al Majali) 2003, s.87<br>
-    Başlıkta "11 kelime" diyor ama imlâsı farklı olan bir kelimeyi 5. bölüme aldım. Ayrıca üç adet tekrar ile tabloda 13 ayet var.
+    Başlıkta "11 kelime" diyor ama imlâsı farklı olan bir kelimeyi 5. bölüme alınca burada 10 kelime kaldı. Ayrıca iki kelimenin ikişer adet tekrarı ile tabloda 14 kelime var.
 </p>
 
 <h3>5. <a href="./mesahif.html">Farklı imlâ</a></h3>
