--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -110,15 +110,15 @@ const DATA1 =
 5:54	rdd	M S		 dal	yertedde	yertedid
 6:32	dwr	S	lam 	 	veled-dâru	veledâru
 6:63	njw	MCBS		 te	encânâ	enceytenâ
-6:137	$rk	S	vav 		şurekâuhum	şurekâihim
+6:137	$rk	S	vav 	ye	şurekâuhum	şurekâihim
 7:3 	*kr	S		 ye	tezekkerûn	yetezekkerûn
 7:43	kwn	S	vav 		vemâ kunnâ	mâ kunnâ
 7:75	qwl	S		 vav	qâle	veqâle
-7:141	nje	S	nun	elif	enceynâkum	encâkum
+7:141	nje	S	nun		enceynâkum	encâkum
 9:100	tHt	C		 <b>min</b>	tahtehâ	min tahtihâ
 9:107	Ax*	M S	vav 		vellezîne	ellezîne
 10:22	syr	S	(syr)	(nşr)	yuseyyirukum	yenşurukum	yellow
-17:93	qwl	S C		 elif	qul 	qâle	pink
+17:93	qwl	C S		 elif	qul 	qâle	pink
 18:36	xyr	M C S		 mim	minhâ	minhumâ
 18:95	mkn	C		 nun	mekkenniy	mekkeneniy
 21:4	qwl	MCBS	elif 		qâle	qul	pink
